syntax = "proto3";

package rivet.backend.pkg.game.create;

import "resources/legacy/proto/common.proto";

message Request {
	reserved 3, 4, 5;

	string name_id = 1;
	string display_name = 2;
	rivet.common.Uuid developer_team_id = 6;
	optional rivet.common.Uuid creator_user_id = 7;
	optional rivet.common.Uuid cluster_id = 8;
}

message Response {
	rivet.common.Uuid game_id = 1;
}
